# ankitui

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  PHASE3_PLAN.md  TODO.md  justfile  rustfmt.toml
.cargo/: config.toml
.claude/commands/: fix-issue.md
.github/workflows/: audit.yml  build-packages.yml  ci.yml  dependencies.yml  release.yml  validate-release.yml
ankitui/: Cargo.toml
ankitui-core/: Cargo.toml
ankitui-core/src/: lib.rs
ankitui-core/src/config/: config.rs  constants.rs  daily.rs  data.rs  manager.rs  mod.rs  profiles.rs  provider.rs  scheduler.rs  shortcuts.rs  ui.rs  validator.rs
ankitui-core/src/core/: card_state_manager.rs  card_template_engine.rs  deck_manager.rs  incremental_learning.rs  media_manager.rs  mod.rs  scheduler.rs  seed.rs  session_controller.rs  stats_engine.rs  tag_manager.rs
ankitui-core/src/data/: content_store.rs  mod.rs  models.rs  state_store.rs  sync_adapter.rs
ankitui-tui/: Cargo.toml
ankitui-tui/examples/: basic_usage.rs  stateful_events.rs
ankitui-tui/src/: lib.rs
ankitui-tui/src/app/: controller.rs  event_loop.rs  main_app.rs  mod.rs  terminal.rs
ankitui-tui/src/app/helpers/: command.rs  data.rs  mod.rs  session.rs  state.rs
ankitui-tui/src/domain/: app_state.rs  commands.rs  mod.rs  queries.rs  services.rs  viewmodels.rs
ankitui-tui/src/tui/: app.rs  mod.rs
ankitui-tui/src/tui/components/: card.rs  deck.rs  dialogs.rs  help.rs  menu.rs  mod.rs  settings.rs  settings_panels.rs  stats.rs  study.rs
ankitui-tui/src/tui/core/: action_dispatcher.rs  app_context.rs  component_registry.rs  config_manager.rs  error_management.rs  event_bus.rs  event_handler.rs  mod.rs  performance.rs  rendering_manager.rs  state_manager.rs
ankitui-tui/src/tui/core/state_management/: app_state.rs  mod.rs  ui_state.rs
ankitui-tui/src/tui/rendering/: interaction_feedback.rs  layout.rs  mod.rs  renderer.rs  theme.rs  visualization.rs
ankitui-tui/src/tui/utils/: mod.rs  search.rs  tui_adapters.rs  tui_formatters.rs  tui_helpers.rs
ankitui-tui/src/ui/: mod.rs  theme.rs
ankitui-tui/src/ui/components/: mod.rs
ankitui-tui/src/ui/components/base/: component.rs  mod.rs
ankitui-tui/src/ui/components/layout/: mod.rs
ankitui-tui/src/ui/components/screens/: mod.rs
ankitui-tui/src/ui/components/screens/common/: confirm.rs  error.rs  input.rs  loading.rs  mod.rs
ankitui-tui/src/ui/components/screens/deck/: browse.rs  create.rs  edit.rs  manage.rs  mod.rs
ankitui-tui/src/ui/components/screens/help/: mod.rs
ankitui-tui/src/ui/components/screens/menu/: mod.rs
ankitui-tui/src/ui/components/screens/search/: mod.rs
ankitui-tui/src/ui/components/screens/settings/: mod.rs
ankitui-tui/src/ui/components/screens/stats/: mod.rs
ankitui-tui/src/ui/components/screens/study/: answer.rs  finished.rs  mod.rs  question.rs  rating.rs
ankitui-tui/src/ui/components/widgets/: mod.rs
ankitui-tui/src/ui/event/: command.rs  handler.rs  keyboard.rs  mod.rs  mouse.rs
ankitui-tui/src/ui/layout/: mod.rs
ankitui-tui/src/ui/navigator/: mod.rs
ankitui-tui/src/ui/render/: mod.rs
ankitui-tui/src/ui/state/: mod.rs  selector.rs  store.rs
ankitui-tui/src/ui/theme/: mod.rs
ankitui-tui/src/utils/: error.rs  mod.rs  result.rs
ankitui/src/: lib.rs  main.rs
ankitui/src/util/: cli.rs  error.rs  mod.rs
decks/: FORMAT_GUIDE.md  dsa.toml  english_vocabulary.toml  linear_algebra.toml  macos_shortcuts.toml  python_basics.toml  vscode_shortcuts.json
docs/: CORE_API_INTEGRATION.md  STATEFUL_EVENT_HANDLING.md  TUI重构设计方案.md
packaging/linux/: build-deb.sh
packaging/macos/: build-dmg.sh  uninstall.sh
packaging/macos/scripts/: postinstall  preinstall
packaging/windows/: Product.wxs  build.ps1
scripts/: build-all.sh  install.sh  uninstall.sh
