[workspace]
members = [
    "ankitui-core",
    "ankitui-tui",
    "ankitui"
]
resolver = "2"

[workspace.dependencies]
# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Data serialization and storage
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
dirs = "6.0"
log = "0.4"
serde_json = "1.0"
csv = "1.3"
env_logger = "0.11"
async-trait = "0.1"
tempfile = "3.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true