[package]
name = "ankitui-tui"
version = "0.1.0"
edition = "2021"
description = "Modern terminal UI for AnkiTUI with clean architecture"

[dependencies]
# Terminal UI
ratatui = { workspace = true }
crossterm = { workspace = true }

# Core business logic
ankitui-core = { path = "../ankitui-core" }

# Serialization and utilities
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# Logging
log = { workspace = true }

# Async support
async-trait = { workspace = true }

# Additional utilities
bincode = "1.3"
dirs = "6.0"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
